done re-reading. next step: reviewer's letter

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -363,3 +363,11 @@ Mechanic.",
    pages = "1678-1712",
    publisher = "Elsevier"
 }
+
+@book{nasa1135,
+  title   = "{E}quations, {T}ables, and {C}harts for {C}ompressible {F}lows",
+  author  = "{Ames Research}",
+  journal = "NASA Report 1135",
+  year    = "1953"
+  }
+  
