--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -739,7 +739,7 @@ regularization of the continuity equation unaffected because $\Pe_\infty = 1$.
 The study of the above limit cases yields two different possible scalings for the Reynolds number: 
 $\Re_\infty = 1$ in the low-Mach limit and $\Re_\infty  = M_\infty^2$ for non-isentropic flows, 
 whereas the numerical P\'eclet number always scales as one. Here, we show how the knowledge of 
-such a scaling can inform a proper normalization of the new entropy residual \resinew for a wide range of Mach numbers.
+such a scaling can inform a proper normalization of the new entropy residual $\resinew$ for a wide range of Mach numbers.
 
 We begin with the  normalization parameter ``$\norm_P^\kappa$''. Using the 
 definition of the viscosity coefficients given in \eqt{eq:visc_definition} and the scaling of 
